--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 asgiref==3.2.10
+DAWG-Python==0.7.2
 Django==3.0.8
 django-debug-toolbar==3.2
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.3.0
+docopt==0.6.2
+environs==9.3.1
+marshmallow==3.10.0
 Pillow==7.2.0
 PyJWT==1.7.1
+pymorphy2==0.9.1
+pymorphy2-dicts-ru==2.4.417127.4579844
+python-dotenv==0.15.0
 pytz==2020.1
 sorl-thumbnail==12.7.0
 sqlparse==0.3.1
